--- a/birdie/Dockerfile
+++ b/birdie/Dockerfile
@@ -1,7 +1,7 @@
 # Build stage
 FROM golang:1.19.2-alpine3.16 AS builder
 WORKDIR /app
-COPY . .
+COPY .. .
 RUN apk update; apk add curl
 RUN go build -o main main.go
 RUN curl -L https://github.com/golang-migrate/migrate/releases/download/v4.15.2/migrate.linux-amd64.tar.gz | tar xvz
